# TinyInfiniTrain

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  add_module.sh  download_starter_pack.sh
.github/workflows/: build.yml  format-check.yaml
docs/: TinyInfiniTrain 作业报告.md  训练营作业介绍.md  项目部署.md
example/common/: tiny_shakespeare_dataset.cc  tiny_shakespeare_dataset.h  tokenizer.cc  tokenizer.h
example/gpt2/: net.cc  net.h
infini_train/include/: dataloader.h  dataset.h  device.h  dispatcher.h  optimizer.h  tensor.h
infini_train/include/autograd/: activations.h  elementwise.h  function.h  linear.h  loss.h  matmul.h  misc.h  normalization.h  outer.h  reduction.h  softmax.h  sparse.h  transform.h
infini_train/include/nn/: functional.h  init.h
infini_train/include/nn/modules/: activations.h  container.h  linear.h  loss.h  module.h  normalization.h  sparse.h
infini_train/src/: dataloader.cc  device.cc  dispatcher.cc  optimizer.cc  tensor.cc
infini_train/src/autograd/: activations.cc  elementwise.cc  function.cc  linear.cc  loss.cc  matmul.cc  misc.cc  normalization.cc  outer.cc  reduction.cc  softmax.cc  sparse.cc  transform.cc
infini_train/src/kernels/cpu/: accumulate_grad.cc  cross_entropy.cc  elementwise.cc  embedding.cc  fill.cc  layernorm.cc  linear.cc  no_op.cc  outer.cc  reduction.cc  sigmoid.cc  slice.cc  softmax.cc  split.cc  stack.cc  transform.cc
infini_train/src/kernels/cuda/: accumulate_grad.cu  cross_entropy.cu  elementwise.cu  embedding.cu  fill.cu  layernorm.cu  linear.cu  no_op.cu  outer.cu  reduction.cu  sigmoid.cu  slice.cu  softmax.cu  split.cu  stack.cu  transform.cu
infini_train/src/nn/: functional.cc  init.cc
infini_train/src/nn/modules/: activations.cc  container.cc  linear.cc  loss.cc  module.cc  normalization.cc  sparse.cc
scripts/: format.py
test/autograd/: test_elementwise.cc
test/example/: test_gpt2.cc
test/kernels/: test_dispatcher.cc  test_matmul.cc  test_matmul_cuda.cc
test/optimizer/: test_adam.cc  test_adam_cuda.cc
test/tensor/: test_tensor.cc
